# src/routes/file.route.ts
@@ -16,6 +16,28 @@ fileRouter.post('/upload', isLogin, isAdmin, upload.single('file'),
     body("title").isString(), body("description").isString(), fileController.uploadFileController);
 
 //User Route
+/**
+ * @swagger
+ * components:
+ *   securitySchemes:
+ *     bearerAuth:
+ *       type: http
+ *       scheme: bearer
+ *       bearerFormat: JWT
+ * /files:
+ *   get:
+ *     summary: Get all files
+ *     description: Retrieve a list of all files
+ *     responses:
+ *       '200':
+ *         description: A list of files has been retrieved successfully
+ *       '401':
+ *         description: Unauthorized, authentication token is invalid or expired
+ *     security:
+ *       - bearerAuth: []
+ */
+
+
 fileRouter.get('/', isLogin , fileController.getFilesController);
 
 fileRouter.get('/:id', isLogin, fileController.getFileByIdController);
